# slipstream

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
app/: DEPRECATED.md  Info.plist  build.sh  make_icns.sh
app-tauri/: .gitignore  README.md  make-icons.sh  package-lock.json  package.json
app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src-tauri/src/: address_attempts.rs  connection_race.rs  diagnostics.rs  geph_config.rs  lib.rs  main.rs  status_client.rs
app-tauri/src-tauri/tests/: connection_race_contract.rs  routing_contract_vectors.rs
contracts/: README.md  address-attempts-v1.json  connection-race-v1.json  platform-adapter-v1.json  recovery-v1.json  route-circuit-registry-v1.json  route-circuit-v1.json  route-policy-activation-v1.json  route-policy-bundle-v1.json  route-policy-manifest-v1.json  routing-policy-v1.json  status-v2-v1.json  windows-capture-fragment-effect-v1.json  windows-capture-source-v1.json  windows-data-plane-v1.json  windows-direct-connector-v1.json  windows-direct-ingress-v1.json  windows-packet-adapter-v1.json  windows-packet-capture-v2.json  windows-packet-capture-v3.json  windows-packet-capture-v4.json  windows-packet-egress-v1.json  windows-packet-flow-v1.json  windows-service-host-v1.json  windows-service-lifecycle-state-v1.json  windows-service-lifecycle-v1.json  windows-service-observer-v1.json  windows-service-ownership-v1.json  windows-service-scm-gate-v1.json  windows-userspace-byte-owner-v1.json  windows-wfp-capture-v1.json  (+7 more)
crates/slipstream-core/: Cargo.toml
crates/slipstream-core/src/: lib.rs  route_circuit.rs  route_circuit_registry.rs  routing_policy.rs  routing_recovery.rs  status_v2.rs
crates/slipstream-core/src/route_policy_activation/: mod.rs  v1.rs
crates/slipstream-core/src/route_policy_bundle/: mod.rs  v1.rs
crates/slipstream-core/src/route_policy_manifest/: mod.rs  v1.rs
crates/slipstream-core/tests/: connection_race_contract.rs  policy_recovery_contract.rs  route_policy_activation_contract.rs  route_policy_bundle_contract.rs  route_policy_manifest_contract.rs  routing_contract_vectors.rs  status_v2_contract.rs
crates/slipstream-userspace-stack-effect-evaluation/: Cargo.toml  README.md
crates/slipstream-userspace-stack-effect-evaluation/src/: lib.rs
crates/slipstream-userspace-stack-effect-evaluation/tests/: capture_fragment_effect_contract.rs  capture_fragment_effect_v1.rs  selected_stack_effect_contract.rs  selected_stack_effect_v1.rs
crates/slipstream-userspace-stack-evaluation/: Cargo.toml  README.md
crates/slipstream-userspace-stack-evaluation/src/: ipv6_fragment_input_v1.rs  lib.rs
crates/slipstream-userspace-stack-evaluation/tests/: ipv6_fragment_input_contract.rs  ipv6_fragment_input_v1.rs  userspace_stack_contract.rs  userspace_stack_v1.rs
crates/slipstream-windows-adapter/: Cargo.toml  README.md
crates/slipstream-windows-adapter/src/: lib.rs  service_operation_lock.rs  v1.rs
crates/slipstream-windows-adapter/src/capture_source/: mod.rs  v1.rs
crates/slipstream-windows-adapter/src/data_plane/: mod.rs  v1.rs
crates/slipstream-windows-adapter/src/direct_connector/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/direct_ingress/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/packet_adapter/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  windows.rs
crates/slipstream-windows-adapter/src/packet_egress/: disposable_route_owner_v1.rs  mod.rs  transition_v1.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/packet_flow/: mod.rs  v1.rs
crates/slipstream-windows-adapter/src/service_controller/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/service_host/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/service_lifecycle/: mod.rs  v1.rs
crates/slipstream-windows-adapter/src/service_lifecycle_state/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/service_native/: mod.rs  windows.rs
crates/slipstream-windows-adapter/src/service_observer/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/service_ownership/: evidence.rs  mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/service_payload/: mod.rs  windows.rs
crates/slipstream-windows-adapter/src/service_scm/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/userspace_stack_bridge/: byte_owner_v1.rs  mod.rs  v1.rs
crates/slipstream-windows-adapter/src/wfp_capture/: mod.rs  v1.rs
crates/slipstream-windows-adapter/src/wfp_runtime/: mod.rs  v1.rs
crates/slipstream-windows-adapter/src/wfp_session/: mod.rs  v1.rs  windows.rs
crates/slipstream-windows-adapter/src/worker_host/: mod.rs  v1.rs
crates/slipstream-windows-adapter/tests/: capture_source_contract.rs  data_plane_contract.rs  direct_connector_contract.rs  direct_connector_windows.rs  direct_ingress_contract.rs  direct_ingress_windows.rs  no_network_contract.rs  packet_adapter_contract.rs  packet_capture_v2_contract.rs  packet_capture_v3_contract.rs  packet_capture_v4_contract.rs  packet_egress_contract.rs  packet_egress_windows.rs  packet_flow_contract.rs  service_controller_contract.rs  service_host_contract.rs  service_lifecycle_contract.rs  service_lifecycle_state_contract.rs  service_native_contract.rs  service_observer_contract.rs  service_ownership_contract.rs  service_ownership_evidence.rs  service_payload_contract.rs  service_scm_contract.rs  userspace_byte_owner_contract.rs  userspace_flow_binding_contract.rs  wfp_capture_contract.rs  wfp_runtime_contract.rs  wfp_session_contract.rs  wintun_exact_route_windows.rs  wintun_lifecycle_windows.rs  worker_host_contract.rs
crates/slipstream-windows-adapter/tests/fixtures/: windows_controller_fixture.rs  windows_service_fixture.rs
crates/slipstream-windows-adapter/tests/support/: mod.rs  userspace_fixture.rs
(+114 files in other folders)
