[package]
name = "slipstream-core"
version = "0.1.0"
description = "Pure routing contracts and state machines for Slipstream"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
