[package]
name = "slipstream-windows-adapter"
version = "0.1.0"
description = "Effect-injected Windows adapter contracts for Slipstream"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slipstream-core = { path = "../slipstream-core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Services",
] }
