[package]
name = "slipstream-windows-adapter"
version = "0.1.0"
description = "Effect-injected Windows adapter contracts for Slipstream"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slipstream-core = { path = "../slipstream-core" }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
] }
