[package]
name = "slipstream-windows-adapter"
version = "0.1.0"
description = "Effect-injected Windows adapter contracts for Slipstream"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[features]
disposable-windows-service-fixture = []
disposable-windows-packet-fixture = []

[[bin]]
name = "slipstream-windows-service"
path = "src/bin/slipstream_windows_service.rs"
test = false
bench = false

[[bin]]
name = "slipstream-disposable-service"
path = "tests/fixtures/windows_service_fixture.rs"
required-features = ["disposable-windows-service-fixture"]
test = false
bench = false

[[bin]]
name = "slipstream-disposable-controller"
path = "tests/fixtures/windows_controller_fixture.rs"
required-features = ["disposable-windows-service-fixture"]
test = false
bench = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slipstream-core = { path = "../slipstream-core" }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Security_Cryptography_Catalog",
  "Win32_Security_Cryptography_Sip",
  "Win32_Security_WinTrust",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Rpc",
  "Win32_System_Services",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }

[dev-dependencies]
socket2 = "=0.6.4"
